Ocean: Api PoolPair (#2838)
* comment unuse poolpairs api

* enable api poolpairs list

* rename struct prefix PoolPair and replace data by response

* fix types

* StringOrF64

* fmt

* char

* rm println

* custom_rewards: Vec<String>

* fix PoolPairsResult de

* filter BURN- and ordering

* creation_height i64

* rm filter since using BTreeMap

* apr and vol -> f64

* getpoolpair

* token typings

* pp list filter_map

* StringOrFloat

* rm StringOrFloat

* wip listpoolswaps

* Implement InitialKeyProvider for PoolSwapRepository

* enable listpoolswapsverbose

* Ocean: poolpair graph (#2855)

* sync_token_graph on initialize

* poolpairs_path

* get_pool_pair_info_cached

* compute_paths_between_tokens + all_simple_paths

* get_pool_pair_info_cached

* add list_paths api

* fix list_paths api

* fix all_simple_paths

* missing Response list_paths api

* temp disable list_pool_pairs_cached + fix get_pool_pair_info_cached

* camelCase TokenIdentifier + Arc for token_graph & tokens_to_swappable_tokens data model

* fix SwapPathPoolPair rename id to pool_pair_id, enable price_ratio

* fix PriceRatio typing

* sync_token_graph: execute first then wait in loop

* estimated_dex_fees_in_pct

* grab fab7f5f defichain-rpc

* rm extra api

* get_best_path

* use rust_decimal

* rm unuse import

* fix estimated_dex_fees_in_pct

* default 1

* mmv list_paths above of get_best_path

* ceil

* format num

* fix typo

* ceil

* id default String

* proper err for`from_token_id != to_token_id`

* fix EstimatedDexFeesInPct typing

* rm unuse comment

* rm tokens_to_swappable_tokens & wip get_swappable_tokens api

* fix get_swappable_tokens

* get_swappable_tokens done

* br

* use format_err.into()

* fix unwrap

* rm println

* sync_token_graph_if_empty

* repl if let else by unwrap_or_default

* rm ceil.. its bug

* rm clone

* refine recur

* parti

--- a/.github/workflows/tests-ocean.yml
+++ b/.github/workflows/tests-ocean.yml
@@ -12,7 +12,9 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
 env:
+  TARGET: x86_64-pc-linux-gnu
   MAKE_DEBUG: 0
+  GIT_VERSION: 1
 
 jobs:
   build:
@@ -23,8 +25,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        ref: 'feature/ocean-archive'
     - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
@@ -36,10 +36,21 @@ jobs:
     - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
+    - name: Restore cpp build cache
+      id: cpp-cache-restore
+      uses: actions/cache/restore@v3
+      with:
+        path: |
+          ./build/depends
+          ./build/src
+          ~/.ccache
+        key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
+
     - uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib -> ../build/lib/target
         save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: ${{ env.TARGET }}
 
     - name: Build binaries
       run: ./make.sh build
