--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -39,6 +39,7 @@ serde_json = "1.0"
 tokio = { version = "1.1", features = ["rt-multi-thread"] }
 async-trait = "0.1"
 regex = "1.5"
+indexmap = "2.2.6"
 
 ## build
 
