script activity indexer

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -61,6 +61,7 @@ prettyplease = "0.2.4"
 libsecp256k1 = "0.7"
 ripemd = { version = "0.1", default-features = false }
 sha3 = "0.10"
+sha2 = { version = "0.10", default-features = false }
 
 ## common
 
@@ -124,7 +125,7 @@ substrate-bn = "0.6"
 #### Ocean dependencies
 bitcoin = "0.31"
 cached = { version = "0.48", features = ["async"] }
-defichain-rpc = { version = "0.18.0", git = "https://github.com/defich/rust-defichain-rpc.git" }
+defichain-rpc = { version = "0.18.0", rev = "332a5c6d0098a008c2354962bfa2d936a128e289", git = "https://github.com/defich/rust-defichain-rpc.git" }
 
 ### Local crates
 ain-cpp-imports = { path = "./ain-cpp-imports" }
