Ocean: address indexers + apis (#2946)
* script activity indexer

* refine + helper::check_if_evm_tx + error::NotFoundIndex

* fmt

* api

* fmt

* fix

* fmt

* Ocean: indexer script unspent + api.address.list_transactions_unspent (#2948)

* script unspent indexer

* list_tx_unspent api

* fmt

* Ocean: indexer script aggregation + api.address.get_balance & get_aggregation (#2949)

* script aggregation indexer

* fmt

* address api: get_balance + get_aggregation

* get_balance return string

* decimal to string as deserialize not support in decimal

* fix NotFoundIndex params

* fix script agg indexer

* ScriptAggregationResponse

* 8 decimal

* decimal -> f64

* map api resp & fix sorting

* fix paginate

* fmt

* script activity uses find_tx_vout

* fix tx getvouts sort asc

* fix indexer_script_activity, index_tx order correction, refine find_tx_vout, rm unuse

* resp mapping

* fmt

* rust-defichain-rpc main

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -61,6 +61,7 @@ prettyplease = "0.2.4"
 libsecp256k1 = "0.7"
 ripemd = { version = "0.1", default-features = false }
 sha3 = "0.10"
+sha2 = { version = "0.10", default-features = false }
 
 ## common
 
