--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -18,8 +18,8 @@ concurrency:
 env:
   BUILD_VERSION: latest # Computed
   DOCKER_HUB_USER: defi
-  # Note: We do not use debug build on CI for dev as well, since debug builds 
-  # take 5x the amount of space and run the GitHub CI workers out of space. 
+  # Note: We do not use debug build on CI for dev as well, since debug builds
+  # take 5x the amount of space and run the GitHub CI workers out of space.
   # make.sh still defaults to debug for local builds
   MAKE_DEBUG: 0
   GIT_VERSION: 1
@@ -42,6 +42,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: git config --global --add safe.directory '*'
+
+    - uses: rui314/setup-mold@v1
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -115,7 +117,7 @@ jobs:
       with:
         name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
         path: ./build/
-    
+
     - name: Unpack binaries
       run: tar -xvzf ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }} -C ./build/
 
